Refactoring; exceptions no longer thrown for data errors.